--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       name="description"
       content="Приходите сами и приводите своих друзей и знакомых!😊"
     />
-    <meta name="author" content="Dima" />
+    <meta name="author" content="Smart Trade" />
+    <meta property="og:image" content="/assets/images/logo.png" />
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Google Font -->
