--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container-fluid position-relative py-3">
           <div class="logo-wrapper">
             <div class="site-logo">
-              <a class="navbar-brand" href="index.html"
+              <a class="navbar-brand" href="/"
                 ><img
                   class="logo-icon mr-2"
                   src="/assets/images/logo.png"
