--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="navbar-brand" href="/"
                 ><img
                   class="logo-icon mr-2"
-                  src="/assets/images/logo.png"
+                  src="/assets/images/logo.svg"
                   alt="Smart Trade"
                 /><span class="logo-text">Smart Trade</span></a
               >
