--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Приходите сами и приводите своих друзей и знакомых!😊"
-    />
+    <meta name="description" content="Приходите сами и приводите своих друзей и знакомых!😊" />
     <meta name="author" content="Smart Trade" />
     <meta property="og:image" content="/assets/images/logo.png" />
     <link rel="shortcut icon" href="favicon.ico" />
@@ -37,11 +34,10 @@
           <div class="logo-wrapper">
             <div class="site-logo">
               <a class="navbar-brand" href="/"
-                ><img
-                  class="logo-icon mr-2"
-                  src="/assets/images/logo.svg"
-                  alt="Smart Trade"
-                /><span class="logo-text">Smart Trade</span></a
+                ><img class="logo-icon mr-2" src="/assets/images/logo.svg" alt="Smart Trade" /><span
+                  class="logo-text"
+                  >Smart Trade</span
+                ></a
               >
             </div>
           </div>
@@ -63,16 +59,13 @@
               </h1>
               <!--//headline-->
               <div class="subheadline mb-4">
-                Приглашаем вас сегодня 12 июня, в 21:00 по Алматы (18:00 МСК) на
-                онлайн встречу для единомышленников, для всех тех, кто желает
-                обрести финансовую независимость.
+                Приглашаем вас сегодня 12 июня, в 21:00 по Алматы (18:00 МСК) на онлайн встречу для
+                единомышленников, для всех тех, кто желает обрести финансовую независимость.
               </div>
               <!--//subheading-->
 
               <div class="cta-holder">
-                <a class="btn btn-secondary scrollto" href="#author-section"
-                  >Подробнее</a
-                >
+                <a class="btn btn-secondary scrollto" href="#author-section">Подробнее</a>
               </div>
               <!--//cta-holder-->
             </div>
@@ -81,14 +74,8 @@
           <!--col-->
           <div class="col-12 col-md-5 mb-5 align-self-center">
             <div class="book-cover-holder">
-              <img
-                class="img-fluid book-cover"
-                src="/assets/images/time.jpg"
-                alt="Smart Trade"
-              />
-              <div class="book-badge d-inline-block shadow">
-                Онлайн<br />встреча
-              </div>
+              <img class="img-fluid book-cover" src="/assets/images/time.jpg" alt="Smart Trade" />
+              <div class="book-badge d-inline-block shadow">Онлайн<br />встреча</div>
             </div>
             <!--//book-cover-holder-->
             <!-- <div class="text-center">
@@ -105,10 +92,7 @@
     </section>
     <!--//hero-section-->
 
-    <section
-      id="author-section"
-      class="author-section section theme-bg-primary py-5"
-    >
+    <section id="author-section" class="author-section section theme-bg-primary py-5">
       <div class="container py-3">
         <!-- <div class="author-profile text-center mb-5">
           <img
@@ -123,36 +107,42 @@
         </h2>
         <div class="author-bio single-col-max mx-auto">
           <p>
-            Приглашаем вас сегодня 12 июня, в 21:00 по Алматы (18:00 МСК) на
-            онлайн встречу для единомышленников, для всех тех, кто желает
-            обрести финансовую независимость.
+            Приглашаем вас сегодня 12 июня, в 21:00 по Алматы (18:00 МСК) на онлайн встречу для
+            единомышленников, для всех тех, кто желает обрести финансовую независимость.
           </p>
           <p>
             Приходите сами и приводите своих друзей и знакомых!😊
           </p>
           <p>
-            У вас есть уникальная возможность познакомиться с тремя спикерами
-            сразу за один вечер.
+            У вас есть уникальная возможность познакомиться с тремя спикерами сразу за один вечер.
           </p>
           <p>
-            Встреча будет проводится в вебинарной комнате ZOOM. Ссылка будет
-            выложена за 5 минут до начала в Телеграмм канал.
+            Встреча будет проводится в вебинарной комнате ZOOM. Ссылка будет выложена за 5 минут до
+            начала в Телеграмм канал.
           </p>
           <div class="author-links text-center pt-4">
             <h5 class="text-white mb-4">До встречи! 😊</h5>
             <ul class="social-list list-unstyled">
               <li class="list-inline-item">
-                <a href="/"><i class="fab fa-twitter"></i></a>
+                <a href="/" target="_blank" rel="noopener noreferrer"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </li>
               <li class="list-inline-item">
-                <a href="/"><i class="fab fa-instagram"></i></a>
+                <a href="/" target="_blank" rel="noopener noreferrer"
+                  ><i class="fab fa-instagram"></i
+                ></a>
               </li>
               <li class="list-inline-item">
-                <a href="/"><i class="fas fa-paper-plane"></i></a>
+                <a href="/" target="_blank" rel="noopener noreferrer"
+                  ><i class="fas fa-paper-plane"></i
+                ></a>
               </li>
 
               <li class="list-inline-item">
-                <a href="/"><i class="fas fa-globe-europe"></i></a>
+                <a href="/" target="_blank" rel="noopener noreferrer"
+                  ><i class="fas fa-globe-europe"></i
+                ></a>
               </li>
             </ul>
             <!--//social-list-->
@@ -168,9 +158,8 @@
     <footer class="footer">
       <div class="footer-bottom text-center py-5">
         <small class="copyright"
-          >Developed with
-          <i class="fas fa-heart" style="color: #fb866a;"></i> by
-          <a class="theme-link" href="https://t.me/skyup" target="_blank"
+          >Developed with <i class="fas fa-heart" style="color: #fb866a;"></i> by
+          <a class="theme-link" href="https://t.me/skyup" target="_blank" rel="noopener noreferrer"
             >Dima</a
           ></small
         >
