--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Приходите сами и приводите своих друзей и знакомых!😊" />
     <meta name="author" content="Smart Trade" />
-    <meta property="og:image" content="/assets/images/logo.png" />
+    <meta property="og:image" content="./assets/images/logo.png" />
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Google Font -->
@@ -34,7 +34,7 @@
           <div class="logo-wrapper">
             <div class="site-logo">
               <a class="navbar-brand" href="/"
-                ><img class="logo-icon mr-2" src="/assets/images/logo.svg" alt="Smart Trade" /><span
+                ><img class="logo-icon mr-2" src="./assets/images/logo.svg" alt="Smart Trade" /><span
                   class="logo-text"
                   >Smart Trade</span
                 ></a
@@ -74,7 +74,7 @@
           <!--col-->
           <div class="col-12 col-md-5 mb-5 align-self-center">
             <div class="book-cover-holder">
-              <img class="img-fluid book-cover" src="/assets/images/time.jpg" alt="Smart Trade" />
+              <img class="img-fluid book-cover" src="./assets/images/time.jpg" alt="Smart Trade" />
               <div class="book-badge d-inline-block shadow">Онлайн<br />встреча</div>
             </div>
             <!--//book-cover-holder-->
@@ -111,7 +111,7 @@
             единомышленников, для всех тех, кто желает обрести финансовую независимость.
           </p>
           <p>
-            Приходите сами и приводите своих друзей и знакомых!😊
+            Приходите сами и приводите своих друзей и знакомых! 😊
           </p>
           <p>
             У вас есть уникальная возможность познакомиться с тремя спикерами сразу за один вечер.
